[gd_scene load_steps=10 format=4 uid="uid://uod8mukngj86"]

[ext_resource type="FontVariation" uid="uid://dhadcv8aq5u14" path="res://fonts/noto/NotoSans-Regular.tres" id="1"]
[ext_resource type="FontFile" uid="uid://bg63fnrfyg0x3" path="res://fonts/Roboto-Regular.ttf" id="2"]
[ext_resource type="Texture2D" uid="uid://cpv1kmmpnhti5" path="res://graphics/default_avatar.png" id="3"]
[ext_resource type="FontVariation" uid="uid://ccdyv65ubusey" path="res://fonts/default_font_black.tres" id="4"]
[ext_resource type="Script" path="res://rythm_game/MultiplayerScoreboardItem.gd" id="6"]
[ext_resource type="Script" path="res://rythm_game/ScoreCounter.gd" id="7"]

[sub_resource type="StyleBoxFlat" id="1"]
content_margin_left = 25.0
content_margin_right = 0.0
bg_color = Color(0.188235, 0.0745098, 0.301961, 0.501961)
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
border_color = Color(0.592157, 0.239216, 0.94902, 0.501961)
corner_radius_top_left = 5
corner_radius_bottom_left = 5
corner_detail = 20
shadow_color = Color(0, 0, 0, 0.25)
shadow_size = 10

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("1")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("4")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0

[node name="MultiplayerScoreboardItem" type="HBPanelContainerBlurEX"]
custom_minimum_size = Vector2(0, 83)
offset_top = 322.0
offset_right = 291.0
offset_bottom = 438.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("1")
script = ExtResource("6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="AvatarTextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(73, 0)
layout_mode = 2
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -20
alignment = 1

[node name="MemberNameLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "EIREXE"

[node name="ScoreCounter" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("4")
text = "1000000"
vertical_alignment = 1
script = ExtResource("7")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="RatingLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
theme_override_fonts/font = SubResource("4")
theme_override_font_sizes/font_size = 20
text = "(NT)COOL"
vertical_alignment = 1
